# cpp-best-practices

./: .travis.yml  CMakeLists.txt  CMakeSettings.json
cpp-best-practices/: CMakeLists.txt  cpp-best-practices.cpp  cpp-best-practices.h
