# CMakeList.txt : CMake project for cpp-best-practices, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (cppbestpractices "cpp-best-practices.cpp" "cpp-best-practices.h")

# TODO: Add tests and install targets if needed.
